# donors-and-ideologies

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: littlesis-entities.json  littlesis-largest-component.pickle  littlesis-relationships.json  voteview-HS117_members.csv
scripts/: 0-download-data.sh  1-littlesis-graph-exploration.ipynb  2-map-ids.py  3-politicians-and-their-donations.py  4-build-matrix-for-nvd.py  5-nvd.jl  6-project-nvd-to-ideology.py  99-visualizations.ipynb  littlesis-graph-exploration.ipynb  utils.py  yaml-to-json.py
