[tool.poetry]
name = "donors-and-ideologies"
version = "0.1.0"
description = "The code for my elective project, supervised by Michele Cosica"
authors = ["DueViktor <viktorduep@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
networkx = "^3.2.1"
numpy = "^1.26.1"
scipy = "^1.11.3"
pandas = "^2.1.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
pytest = "^7.4.3"
pre-commit = "^3.5.0"
pytest-cov = "^4.1.0"
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
